# feudor

./: Makefile  pyproject.toml
src/api/: config.py  main.py
src/api/handlers/: __init__.py  db.py  request_id_search.py  search.py
src/api/parser/: bot.py
src/tests/: test-search-api.py
