[tool.poetry]
name = "feudor"
version = "1.0"
description = ""
authors = ["ashm.tech"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.8.2"
bs4 = "^0.0.1"
beautifulsoup4 = "^4.11.2"
fastapi = "^0.94.0"
uvicorn = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
